[project]
name = "stock-live-monitor"
version = "1.0.0"
description = "Real-time stock monitoring system with Kiwoom OpenAPI and WebSocket"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "websockets>=12.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "playwright>=1.55.0",
    "rich>=14.2.0",
]

